[package]
name = "cursed-rust-talk"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "01"
path = "src/bin/01_basic_expressions.rs"

[[bin]]
name = "02"
path = "src/bin/02_a_little_bit_more_interesting.rs"

[[bin]]
name = "03"
path = "src/bin/03_wait_a_minute_what.rs"

[[bin]]
name = "04"
path = "src/bin/04_chatgpt_can_you_do_this.rs"

[[bin]]
name = "05"
path = "src/bin/05_never_type.rs"

[[bin]]
name = "06"
path = "src/bin/06_cursed_rust.rs"
[dependencies]
rand = "0.10.0-rc.0"